Blog name change to Interactions

--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -13,7 +13,7 @@
                     <a class="nav-link" href="{{ site.baseurl }}/">Home</a>
                 </li>
                 <li class="nav-item{% if page.blog %} active{% endif %}">
-                    <a class="nav-link" href="{{ site.baseurl }}/blog">Blog</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/blog">Interactions</a>
                 </li>
                 <li class="nav-item{% if page.title == "About" %} active{% endif %}">
                     <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
