Footer Change Connections Gold

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="text-muted">2018 - Tapper</span>
+      <span class="text-muted">2018 - Connections Gold</span>
       <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
     </div>
